manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2  # Adjust as needed
  selector:
    matchLabels:
      app: app  # ⭐ Used by Service’s `spec.selector.app` to find Pods
  template:
    metadata:
      labels:
        app: app # ⭐ Must match Service’s selector
    spec:
      containers:
      - name: app
        image: rger/taskmgr-pte-repo:latest # Docker Hub image
        ports:
        - containerPort: 3000  # Same as ECS task's container port and Service's targetPort
---
  #Service (internal LB)
  apiVersion: v1
  kind: Service
  metadata:
    name: app-service
  spec:
    selector:
      app: app
    ports:
      - protocol: TCP
        port: 80
        targetPort: 3000
    type: ClusterIP  # Use NodePort/LoadBalancer if needed
