manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress # ⭐ Must match `service.yaml`’s name
spec:
  ingressClassName: nginx # Use the NGINX Ingress Controller
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodeapp-service # ⭐ Must match `service.yaml`’s name
            port:
              number: 80
